--- a/vim.ipynb
+++ b/vim.ipynb
@@ -9,7 +9,7 @@
     "there are 4 modes\n",
     "- normal `esc`\n",
     "- visual `v`\n",
-    "- insert `i`\n",
+    "- insert `i` or `jk`\n",
     "- command, `:`"
    ]
   },
@@ -36,13 +36,17 @@
     "\n",
     "### Single character verbs\n",
     "they act as shortcuts for actions that you can also perform motions\n",
-    "- `x` delete character under te cursor\n",
+    "- `x` delete character under the cursor and not save to register\n",
     "- `r` replace charactrer under cursor with another character\n",
     "- `s` delete character under cursor and move to insert mode\n",
     "\n",
+    "### Numbers\n",
+    "- `space + +` will increment a number\n",
+    "- `space + -` will decrement a number\n",
+    "\n",
     "### Motion/Text object character verbs\n",
-    "- `d` delete text specified by motion\n",
-    "- `c` delete text specified by motion and go into insert mode\n",
+    "- `d` delete text specified by motion, and save to register\n",
+    "- `c` delete text specified by motion and go into insert mode and save to register\n",
     "- `y` yank(copy) text specified by motion\n",
     "- `I` will go to beginning of the line in insert mode\n",
     "- `A` will go to end of line in insert mode\n",
@@ -55,12 +59,41 @@
     "- `$` go to the end of the line\n",
     "- `G` go to end of the file\n",
     "- `f` go to the next occurence of `.` on the current line\n",
+    "- `f<symbol>` will go first occurance of the symbol to right of cursor on the same line (f stands for forward)\n",
+    "- `t<symbol>` will jump up to the first occurance of the symbol to right of cursor on the same line\n",
+    "- `F<symbol>` will go to first occurance to the left of the cursor on the same line\n",
+    "- `/<searchterm>` will jump to the first occurance of the search term after the cursor\n",
+    "- `?<searchterm>` start looking backwards for your search term\n",
+    "- `space + /` to clear search\n",
+    "- `n` go to next occurence of search pattern\n",
+    "- `N` will go to previous occurence of search pattern\n",
+    "- `5` $\\downarrow$ move 5 rows down\n",
+    "- `7` $\\uparrow$ moves 7 lines up\n",
+    "- `15` $\\rightarrow$ jumps 15 columns right\n",
+    "\n",
+    "- `hjkl` keys replace the arrow keys\n",
+    "- `k` = $\\leftarrow$\n",
+    "- `j` = $\\downarrow$\n",
+    "- `h` = $\\uparrow$\n",
+    "- `l` = $\\rightarrow$\n",
+    "- `4k` = 4$\\leftarrow$\n",
+    "- `4j` = 4$\\downarrow$\n",
+    "- `4h` = 4$\\uparrow$\n",
+    "- `4l` = 4$\\rightarrow$\n",
+    "- `w` jump to the beggining of the next word\n",
+    "- `W` continuous sequence of non-blank characters\n",
+    "- `e` jumps to the end of a word\n",
+    "- `b` jumb backward a word\n",
+    "- `0` jumps to beginning of a line\n",
+    "- `_` jumps to the first non whitespace at the begining of the line\n",
+    "\n",
     "\n",
     "### Text objects\n",
     "text objects as a defined chunk of text\n",
     "\n",
     "## Combining motions with verbs\n",
-    "- `d$` delete to the end of the line\n",
+    "- `d$` delete from cursor to the end of the line\n",
+    "- `d0` will delete for cursor to beginning of the line\n",
     "- `cs)` change through the next closing parentheses\n",
     "- `yG` copy everything through the end of the file\n",
     "\n",
@@ -68,6 +101,7 @@
     "- `ciw` change contents of a word\n",
     "- `it` applies to everything in current xml/html tag\n",
     "- `yit` copy contents of an html tag\n",
+    "- `ya{` copy contents inside the braces along with the content itself (a for around)\n",
     "- `i{` applies everything inside nearest curly braces\n",
     "- `aw` applies to a word (includes surrounding white spaces)\n",
     "- `daw` delete a word and surrounding white spaces\n",
@@ -196,8 +230,10 @@
    "metadata": {},
    "source": [
     "# File operation\n",
-    "- `:e` will open up a file for edit\n",
-    "- `:e!` if you made changes and want to go back to the last saved document (or when you open the document you have not pressed save yet"
+    "- `:e` or `:edit` will open up a file for edit, or create a new file if doesn't exist\n",
+    "- `:e!` if you made changes and want to go back to the last saved document (or when you open the document you have not pressed save yet\n",
+    "- `:!rm <filename>` or `:!del <filename<` will delete a file\n",
+    "- `:!mkdir <foldername>` to create folder"
    ]
   },
   {
@@ -211,7 +247,12 @@
     "- breaks repeatability\n",
     "\n",
     "\n",
-    "multiple cursors"
+    "multiple cursors\n",
+    "\n",
+    "- `va` select objectsand whitespace around selected (a is for around)\n",
+    "- `vaw` slects a workd and whitespae following in\n",
+    "- `va(` or `va)` selects text inside parentheses including parentheses themselves\n",
+    "- `va\"` selects text inside double quotes, including double quotes themselves"
    ]
   },
   {
@@ -337,9 +378,13 @@
     "\n",
     "`p` from visual mode is slightly different than `p` in normal mode, because it takes the line that was replced, and puts it in the Visual Mode buffer. Making it difficult to paste the same text multiple times because once the text is paste, the text it replaced is now put into the Visual Mode buffer.\n",
     "\n",
+    "- `v%` select text, including and within the corresponding closing brackets, parentheses, etc\n",
+    "- `v%d` delete selection of text including the surrounding closing brackets, parenthesis, etc\n",
+    "- `v%y` copies selection of text including the surrounding closing brackets, parenthesis, etc\n",
     "\n",
-    "## Visual Blok mode\n",
-    "`ctrl + v` to ento into visual blck mode.\n",
+    "\n",
+    "## Visual Block mode\n",
+    "`ctrl + v` to ento into visual block mode.\n",
     "\n",
     "Vim Visual block mode allows you select text in columns. Allows you to update in multiple columns.\n",
     "\n",
@@ -387,11 +432,12 @@
    "metadata": {},
    "source": [
     "# Split Windows\n",
-    "- `:sp` split a window horizontally on the file you are editing\n",
-    "- `:vsp` split windo vertically\n",
+    "- `:sp` or `space + sh` or `ctrl + w + s` split a window horizontally on the file you are editing\n",
+    "- `:vsp` or `space + sv` or `ctrl + w + v` split window vertically\n",
     "- `ctrl + w` keep pressing `w` will allow you to cycle through all the windows\n",
-    "- `ctrl + w + s` will split window horizontally same as `:sp`\n",
-    "- `ctrl + w + v` will split window vertically  same as `:vsp`\n",
+    "- `space + sm` maximize split window or restore to original size\n",
+    "- `space + se` will respace windows with equal width\n",
+    "- `space + sx` will close current window\n",
     "- `:q` close window you are in\n",
     "\n",
     "remapping of they keymaps\n",
@@ -456,15 +502,148 @@
    "source": [
     "# Command mode\n",
     "- `:norm <normal mode operations>` will allows you to execute normal mode operation from the command line\n",
-    "- `:! <command line>` allows you to execute command line operations in command mode "
+    "- `:! <command line>` allows you to execute command line operations in command mode \n",
+    "\n",
+    "- `:lua =vim.api.nvim_get_current_win()` returns the window ID of the current window.\n",
+    "- `:lua =vim.api.nvim_get_current_buf()` returns the buffer ID of the current buffer\n",
+    "\n",
+    "- `:h rtp` opens up the help page for runtime path"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "395f0b19-6dac-4837-9b92-5e69b9819444",
+   "cell_type": "markdown",
+   "id": "d8912660-50e6-475d-9a64-b76555cb8ed5",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Plugins\n",
+    "\n",
+    "## Packer(Plugin Package Manager)\n",
+    "Packer is plugin package manager.\n",
+    "- `:PackerCompile` or `:w` in plugins-setup.lua to install paker plugin\n",
+    "- `:PackerStatus` to show the list of installed plugins\n",
+    "\n",
+    "## Debugging\n",
+    "- `:checkhealth <plugin name>` to trouple shoot in normal mode\n",
+    "\n",
+    "## Comments\n",
+    "- `gcc` to comment out a line or uncomment a line\n",
+    "- `gc` comment/uncomment out 2 lines\n",
+    "- `gcw` comment/uncomment word\n",
+    "- `gc}` comment/uncomment until next blank line\n",
+    "- `gc$` comment/uncomment till end of line\n",
+    "- `<number>gc` comment or uncomment a number of line\n",
+    "- `gbc` blockwise comment/uncomment on current line\n",
+    "- `<number>gb` block comment/uncomment n lines\n",
+    "- `gb}` block comment/uncomment untill next blank line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3213730-e0b1-42c7-8a58-5ef0f5c5956b",
+   "metadata": {},
+   "source": [
+    "## Navigation\n",
+    "### Nvim Tree\n",
+    "- `space + e` opens up or close nvim tree explorer\n",
+    "- `ctrl + ]` to change the root to a node\n",
+    "- `-` change to root node to parent\n",
+    "- `a` create a new file, if you add \"/\" at the end it becomes a folder eg. \"newfolder/\n",
+    "- `d` delete files and folders\n",
+    "- `g?` for help and lists of commands\n",
+    "\n",
+    "### Telescope\n",
+    "Telescope is a fuzzyfinder for finding files by filename or content\n",
+    "- `space + ff` find files within current working directory, respects .gitignore\n",
+    "- `space + fs` find string in current working directory as you type\n",
+    "- `space + fc` find string under cursor in current working directory\n",
+    "- `space + fb` list open buffers in current neovim instance\n",
+    "- `space + fh` list available help tags\n",
+    "- `esc + esc` to get out of telescope window\n",
+    "\n",
+    "- `space + gff` find files in git directory\n",
+    "- `space + gc` list all git commits (use cr\"enter\" to checkout) [\"gc\" for git commits]\n",
+    "- `space + gfc` list git commits for current file/buffer (use cr\"enter\" to checkout) [\"gfc\" for git file commts]\n",
+    "- `space + gb` list git branches (use cr\"enter\" to checkout) [\"gb\" for git branch]\n",
+    "- `space + gs` list current changes per file to diff preview [\"gs\" for git status]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7b55a7d-b283-4a4e-b8dd-69ff458a1c44",
+   "metadata": {},
+   "source": [
+    "## Autocompletion\n",
+    "\n",
+    "### Nvim Cmp\n",
+    "- `ctrl + p` previous suggestion\n",
+    "- `ctrl + n` next suggestion\n",
+    "- `ctrl + b` \n",
+    "- `ctrl + f`\n",
+    "- `ctrl + space`show completion suggestion\n",
+    "- `ctrl + e` close completion window\n",
+    "- `enter` confirm matting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "701c1b11-11f1-465c-8bbc-323f204e5757",
+   "metadata": {},
+   "source": [
+    "### Treesitter \n",
+    "Treesitter parses text files and turn them to syntax trees so your language server can give better understanding of your code. It can do syntax highlighting. LSP provide a framework and implementation that allows people to get language smarts without writing new integrations and plugins for every language.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a97cb50-1e26-423f-a50a-ac397fccda1a",
+   "metadata": {},
+   "source": [
+    "## Lsp\n",
+    "LSP serves as the middleman that allows code editors and IDE (VIM, VSCode, IntelliJ tec.) provide intelligent language features for development.\n",
+    "\n",
+    "### Lsp Saga\n",
+    "Code display window in normal mode\n",
+    "- `fg` show definition, references\n",
+    "- `gD` go to declaration\n",
+    "- `gd` see definition and make edits in wondow\n",
+    "- `gi` go to implementation\n",
+    "- `space + ca` see available code actions\n",
+    "- `space + rn` smart rename\n",
+    "- `space + D` show diagnostics for line\n",
+    "- `space + d` show diagnostics for cursor\n",
+    "- `[d` jump to previous diagnostic in buffer\n",
+    "- `]d` jump to next diagnostic in buffer\n",
+    "- `K` show documentation for what is under cursor\n",
+    "- `space + o` see outline on right hand side"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "563e0eeb-0b97-4a91-97e2-b15d95b45374",
+   "metadata": {},
+   "source": [
+    "## Vim Surround\n",
+    "This plugin provides key mappings to easily delete, change and add surroundings(parentheses, brackets, quotes, XML tags and more).\n",
+    "\n",
+    "- `cs<previous surround><new surround as text>` to change the old surroundings to new surroundings when the cursor is in the surroundings\n",
+    "\n",
+    "eg.\n",
+    "`\"hello world\"` -> `cs\"<p>` -> `<p>hello world</p>` \n",
+    "\n",
+    "note that `t` can denote any tags in XML, \n",
+    "\n",
+    "`<p>hello world</p>` -> `cst\"` -> `\"hello world\"`\n",
+    "\n",
+    "- `ds<surround>` will delete surround\n",
+    "- `ysiw<surrounding text>` will surround word with the text specified\n",
+    "- `yss<surrounding text>` will surround entire line with the text specified "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9492dd-96a7-454c-9116-71a627eda3d9",
+   "metadata": {},
    "source": []
   },
   {
