--- a/vim.ipynb
+++ b/vim.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "### Motions\n",
     "Motions are the motion commands that you can use anytime to move around Vim, some of the examples\n",
-    "- `$` go to the end of the line\n",
+    "- `$` or `space + l` go to the end of the line\n",
     "- `G` go to end of the file\n",
     "- `f` go to the next occurence of `.` on the current line\n",
     "- `f<symbol>` will go first occurance of the symbol to right of cursor on the same line (f stands for forward)\n",
@@ -85,7 +85,7 @@
     "- `e` jumps to the end of a word\n",
     "- `b` jumb backward a word\n",
     "- `0` jumps to beginning of a line\n",
-    "- `_` jumps to the first non whitespace at the begining of the line\n",
+    "- `_` or `space + h` jumps to the first non whitespace at the begining of the line\n",
     "\n",
     "\n",
     "### Text objects\n",
@@ -644,7 +644,13 @@
    "cell_type": "markdown",
    "id": "8a9492dd-96a7-454c-9116-71a627eda3d9",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Multiple Cursor\n",
+    "- `ctrl + N` to select words\n",
+    "- `ctrl + `$\\downarrow$ or `ctrl + `$\\uparrow$ to create cursors vertically\n",
+    "- `i`, `I`, `a`, `A`, `c` to go into insert mode\n",
+    "- `esc + esc` to escape multi cursor edit mode."
+   ]
   },
   {
    "cell_type": "markdown",
