--- a/vim.ipynb
+++ b/vim.ipynb
@@ -654,6 +654,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a84956d-ba2c-4dee-b43c-4a22584dd093",
+   "metadata": {},
+   "source": [
+    "# Java Integration\n",
+    "https://sookocheff.com/post/vim/neovim-java-ide/?fbclid=IwAR3rEh6AFYFPcozfS4v2sjOXN7f2VJPn8gWOO8Rr9DMKd0-EhcgoG-92L44\n",
+    "https://github.com/YilengYao/Neo-Vim/blob/main/Java-NeoVim.ipynb\n",
+    "\n",
+    "Java LSP Mappings\n",
+    "- `gD` go to declaration\n",
+    "- `gd` go to definition\n",
+    "- `gi` go to implementation\n",
+    "- `K` Hover over text\n",
+    "- `ctrl + k` show signature\n",
+    "- `space + wa` add workspace folder\n",
+    "- `space + wr` remove workspace folder\n",
+    "- `space + wl` list workspace folder\n",
+    "- `space + D` go to type definition\n",
+    "- `space + rn` rename\n",
+    "- `space + ca` code action\n",
+    "- visual mode `space + ca` code action\n",
+    "- `space + f` format file\n",
+    "- `ctrl + o` organize imports\n",
+    "- `space + tc` run test lass\n",
+    "- `space + tm` run test method\n",
+    "- `space + ve` extract variable\n",
+    "- `space + ce` extract constant\n",
+    "- visual mode ` space + em` extract method\n",
+    "\n",
+    "Debug Adapter Client Mappings\n",
+    "- `space + bb` toggle breakpoint\n",
+    "- `space + bc` set breakpoint condition\n",
+    "- `space + bl` set breakpoint, log point message\n",
+    "- `space + br` clear breakpoints\n",
+    "- `space + ba` telescope dap list breakpoints\n",
+    "\n",
+    "- `space + dc` dap continue\n",
+    "- `space + dj` dap step over\n",
+    "- `space + dk` dap step into\n",
+    "- `space + do` dap step out\n",
+    "- `space + dd` dap disconnect\n",
+    "- `space + dt` dap terminate\n",
+    "- `space + dr` dap repl toggle\n",
+    "- `space + dl` dap run last\n",
+    "- `space + di` dap ui widgets hover\n",
+    "- `space + d?` dap ui widgets center float\n",
+    "- `space + df` telescope dap frames\n",
+    "- `space + dh` telescope dap commands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "68b61e89-c9b9-4f47-af3f-ca2adbb22401",
    "metadata": {},
    "source": [
