--- a/vim.ipynb
+++ b/vim.ipynb
@@ -550,6 +550,9 @@
     "- `a` create a new file, if you add \"/\" at the end it becomes a folder eg. \"newfolder/\n",
     "- `d` delete files and folders\n",
     "- `g?` for help and lists of commands\n",
+    "- `c` to copy a file\n",
+    "- `x` to cut a file\n",
+    "- `p` to paste a file\n",
     "\n",
     "### Telescope\n",
     "Telescope is a fuzzyfinder for finding files by filename or content\n",
