--- a/vim.ipynb
+++ b/vim.ipynb
@@ -553,6 +553,7 @@
     "- `c` to copy a file\n",
     "- `x` to cut a file\n",
     "- `p` to paste a file\n",
+    "- `ctrl + w` window picker\n",
     "\n",
     "### Telescope\n",
     "Telescope is a fuzzyfinder for finding files by filename or content\n",
