added formatting shortcut

--- a/vim.ipynb
+++ b/vim.ipynb
@@ -604,7 +604,8 @@
     "- `[d` jump to previous diagnostic in buffer\n",
     "- `]d` jump to next diagnostic in buffer\n",
     "- `K` show documentation for what is under cursor\n",
-    "- `space + o` see outline on right hand side"
+    "- `space + o` see outline on right hand side\n",
+    "- `space + F` format file"
    ]
   },
   {
@@ -663,7 +664,7 @@
     "- `space + rn` rename\n",
     "- `space + ca` code action\n",
     "- visual mode `space + ca` code action\n",
-    "- `space + f` format file\n",
+    "- `space + F` format file\n",
     "- `ctrl + o` organize imports\n",
     "- `space + tc` run test lass\n",
     "- `space + tm` run test method\n",
